fix: alignment issues and distractive interface

--- a/about.css
+++ b/about.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
+
 html,body{
     margin: 0;
     padding: 0;
@@ -25,6 +27,7 @@ header{
    font-size:26px;
    line-height: 2 ;
    padding: 40px;
+   font-family: 'Poiret One';
 }
 .description{
     text-align: justify;
