--- a/service.css
+++ b/service.css
@@ -4,27 +4,26 @@ body{
     padding-right: 50px;
     padding-bottom: 50px;
     margin: 0px;
+    font-family: Arial, Helvetica, sans-serif;
     background-color: #e1f8fc;
 }
 .hole1{
-    background-color: #f2f0ee;
     padding-bottom: 50px;
 }
 .main1{
-    text-align: center;
-    color: #134d0c;
     padding-top: 5px;
     padding-bottom: 5px;
+    text-align: center;
 }
 .images{
     display: flex;
     flex-wrap: wrap;
 }
 .images h1{
-    color: rgb(20, 65, 65);
+    color: black;
 }
 .images p{
-    color: rgb(145, 83, 3);
+    color: red;
 }
 span{
     color: #f3701d;
@@ -37,16 +36,10 @@ a{
     display: flex;
 }
 a:link{
-    color:aqua
-}
-a:visited{
-    color: orangered
+    color:blue;
 }
 a:hover{
-    color: rgb(62, 13, 107);
-}
-a:active{
-    color: rgb(185, 39, 161);
+    color: orangered;
 }
 .images p{
     text-align: justify;
@@ -55,5 +48,6 @@ a:active{
     width: 330px;
     margin: 20px;
     padding: 20px;
+    margin-left: 80px;
     text-align: center;
 }
